# ai-ready-data

./: .gitattributes  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  update-requirements.sh
.github/workflows/: ci-cd.yaml
data-1/parsed/: cenik_go-odjem_1_12_2025.txt  splosni-pogodbeni-pogoji-za-gospodinjske-odjemalce_24_7_2024_.txt
data-1/parsed/plain/: racun-petrol-000000000000.txt
data-1/raw/internal/: measurements.csv
data-1/raw/public/: Racun-za-porabljeno-električno-energijo-SODO-Sistemski-operater-distribucijskega-omrezja-z-elektricno-energijo-metadata.json  cenik_go-odjem_1_12_2025-metadata.json
data/raw/public/: Racun-za-porabljeno-električno-energijo-SODO-Sistemski-operater-distribucijskega-omrezja-z-elektricno-energijo.html  splosni-pogodbeni-pogoji-za-gospodinjske-odjemalce_24_7_2024_-metadata.json
src/ai_ready_data/: __init__.py  answer.py  constants.py  generate.py  parse.py  retriever.py
tests/: test_parse.py
tests/data/: basic-doc.md
