[project]
name = "ai-ready-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul Larsen", email = "munichpavel@gmail.com" }
]
requires-python = "==3.10.*"  # hugging face space default
dependencies = [
    "gradio>=6.9.0",
    "lxml>=6.0.2",
    "pdfminer-six>=20260107",
]

[project.scripts]
ai-ready-data = "ai_ready_data:app"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
