[project]
name = "ai-ready-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul Larsen", email = "munichpavel@gmail.com" }
]
requires-python = "==3.10.*"  # hugging face space default
dependencies = [
    "gradio==6.9.0",
    "lxml>=6.0.2",
    "pdfminer-six>=20260107",
    "polars>=1.39.3",
    "structlog>=25.5.0",
    "litellm>=1.75.5",
    "google-adk>=1.28.0",
]

[project.scripts]
ai-ready-data = "ai_ready_data:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=9.0.2",
]

[tool.uv]
exclude-newer = "1 week"
constraint-dependencies = ["litellm>=1.75.5,<=1.82.6"]
